<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/upload_ok_text_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_complete_successfully_alert_dialog"
        android:textSize="32sp"
        android:textAllCaps="true"
        android:background="@color/design_default_color_primary_dark"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/dialog_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/upload_was_successfully_done"
        android:src="@drawable/ic_baseline_done_outline_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cloors" />

    <TextView
        android:id="@+id/use_desktop_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        android:gravity="center"
        android:text="@string/use_desktop_app_alert"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="34sp"
        android:textStyle="italic"
        />

</LinearLayout>
